<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="leak_canary_test_class_name" translatable="false">assertk.Assert</string>
    <string name="app_name" translatable="false">AutoJs6</string>
    <string name="app_name_qq" translatable="false">QQ</string>
    <string name="color_library_identifier_android_colors" translatable="false">Android</string>
    <string name="color_library_identifier_css_colors" translatable="false">CSS</string>
    <string name="color_library_identifier_web_colors" translatable="false">WEB</string>
    <string name="com_twofortyfouram_log_tag" tools:ignore="ResourceName" translatable="false" />
    <string name="default_build_apk_version_code" translatable="false">1</string>
    <string name="default_build_apk_version_name" translatable="false">1.0.0</string>
    <string name="default_key_editor_pinch_to_zoom_strategy" translatable="false">@string/key_editor_pinch_to_zoom_change_text_size</string>
    <string name="default_key_file_extensions" translatable="false">@string/key_file_extensions_show_all_but_executable</string>
    <string name="default_key_hidden_files" translatable="false">@string/key_hidden_files_not_show</string>
    <string name="default_key_keep_screen_on_when_in_foreground" translatable="false">@string/key_keep_screen_on_when_in_foreground_disabled</string>
    <string name="default_key_root_record_out_file_type" translatable="false">@string/key_root_record_out_file_type_binary</string>
    <string name="default_main_file_name" translatable="false">main.js</string>
    <string name="developer_full_name" translatable="false">SuperMonster003</string>
    <string name="developer_nickname" translatable="false">SuperMonster003</string>
    <string name="ellipsis_six" translatable="false" tools:ignore="TypographyEllipsis">... ...</string>
    <string name="ellipsis_three" translatable="false" tools:ignore="TypographyEllipsis">...</string>
    <string name="email" translatable="false">hybbbb1996@gmail.com</string>
    <string name="entry_app_language_ar" translatable="false">العربية</string>
    <string name="entry_app_language_en" translatable="false">English</string>
    <string name="entry_app_language_es" translatable="false">Español</string>
    <string name="entry_app_language_fr" translatable="false">Français</string>
    <string name="entry_app_language_ja" translatable="false">日本語</string>
    <string name="entry_app_language_ko" translatable="false">한국어</string>
    <string name="entry_app_language_ru" translatable="false">Русский</string>
    <string name="entry_app_language_zh_hans" translatable="false">简体中文</string>
    <string name="entry_app_language_zh_hant_hk" translatable="false">繁體中文 (香港)</string>
    <string name="entry_app_language_zh_hant_tw" translatable="false">繁體中文 (台灣)</string>
    <string name="format_default_package_name" formatted="true" translatable="false">org.autojs.autojs6.%s</string>
    <string name="format_dialog_progress_number_format_kilo_bytes" translatable="false">%.1fKB/%.1fKB</string>
    <string name="format_dialog_progress_number_format_mega_bytes" translatable="false">%.2fMB/%.2fMB</string>
    <string name="id_launcher_shortcut_docs" translatable="false">shortcut_$_docs</string>
    <string name="id_launcher_shortcut_log" translatable="false">shortcut_$_log</string>
    <string name="id_launcher_shortcut_settings" translatable="false">shortcut_$_settings</string>
    <string name="key_a11y_service" translatable="false">key_$_a11y_service</string>
    <string name="key_about_app_and_developer" translatable="false">key_$_about_app_and_developer</string>
    <string name="key_about_app_tips" translatable="false">key_$_about_app_tips</string>
    <string name="key_all_files_access" translatable="false">key_$_all_files_access</string>
    <string name="key_app_language" translatable="false">key_$_app_language</string>
    <string name="key_app_language_ar" translatable="false">key_$_app_language_ar</string>
    <string name="key_app_language_auto" translatable="false">key_$_app_language_auto</string>
    <string name="key_app_language_en" translatable="false">key_$_app_language_en</string>
    <string name="key_app_language_es" translatable="false">key_$_app_language_es</string>
    <string name="key_app_language_fr" translatable="false">key_$_app_language_fr</string>
    <string name="key_app_language_ja" translatable="false">key_$_app_language_ja</string>
    <string name="key_app_language_ko" translatable="false">key_$_app_language_ko</string>
    <string name="key_app_language_ru" translatable="false">key_$_app_language_ru</string>
    <string name="key_app_language_zh_hans" translatable="false">key_$_app_language_zh</string>
    <string name="key_app_language_zh_hant_hk" translatable="false">key_$_app_language_zh_hk</string>
    <string name="key_app_language_zh_hant_tw" translatable="false">key_$_app_language_zh_tw</string>
    <string name="key_auto_check_for_updates" translatable="false">key_$_auto_check_for_updates</string>
    <string name="key_auto_night_mode_enabled" translatable="false">key_$_auto_night_mode_enabled</string>
    <string name="key_change_working_dir" translatable="false">key_$_change_working_dir</string>
    <string name="key_check_for_updates" translatable="false">key_$_check_for_updates</string>
    <string name="key_check_for_updates_while_ignoring_the_local_version" translatable="false">key_$_check_for_updates_while_ignoring_the_local_version</string>
    <string name="key_client_socket_normally_closed" translatable="false">key_$_client_socket_normally_closed</string>
    <string name="key_color_select_activity_legacy_layout" translatable="false">key_$_color_select_activity_legacy_layout</string>
    <string name="key_dialog_check_display_over_other_apps" translatable="false">key_$_dialog_check_display_over_other_apps</string>
    <string name="key_dialog_foreground_svc" translatable="false">key_$_dialog_foreground_svc</string>
    <string name="key_dialog_log_entries_exported" translatable="false">key_$_dialog_log_entries_exported</string>
    <string name="key_dialog_manage_all_files_permission" translatable="false">key_$_dialog_manage_all_files_permission</string>
    <string name="key_dialog_num_of_log_entries_exceeds_limit_for_sending" translatable="false">key_$_num_of_log_entries_exceeds_limit_for_sending</string>
    <string name="key_dialog_selected_abi_is_unavailable" translatable="false">key_$_dialog_selected_abi_is_unavailable</string>
    <string name="key_display_over_other_apps" translatable="false">key_$_display_over_other_apps</string>
    <string name="key_documentation_source" translatable="false">key_$_documentation_source</string>
    <string name="key_documentation_source_local" translatable="false">key_$_documentation_source_local</string>
    <string name="key_documentation_source_online" translatable="false">key_$_documentation_source_online</string>
    <string name="key_editor_pinch_to_zoom_change_text_size" translatable="false">key_$_editor_pinch_to_zoom_change_text_size</string>
    <string name="key_editor_pinch_to_zoom_disable" translatable="false">key_$_editor_pinch_to_zoom_disable</string>
    <string name="key_editor_pinch_to_zoom_scale_view" translatable="false">key_$_editor_pinch_to_zoom_scale_view</string>
    <string name="key_editor_pinch_to_zoom_strategy" translatable="false">key_$_editor_pinch_to_zoom_strategy</string>
    <string name="key_editor_text_size" translatable="false">key_$_editor_text_size</string>
    <string name="key_editor_theme" translatable="false">key_$_editor_theme</string>
    <string name="key_enable_a11y_service_with_root_access" translatable="false">key_$_enable_a11y_service_with_root_access</string>
    <string name="key_enable_a11y_service_with_secure_settings" translatable="false">key_$_enable_a11y_service_with_secure_settings</string>
    <string name="key_enable_observe_key" translatable="false">key_$_enable_observe_key</string>
    <string name="key_explorer_file_default_prefix" translatable="false">key_$_explorer_file_default_prefix</string>
    <string name="key_extending_js_build_in_objects" translatable="false">key_$_extending_js_build_in_objects</string>
    <string name="key_file_extensions" translatable="false">key_$_file_extensions</string>
    <string name="key_file_extensions_not_show" translatable="false">key_$_file_extensions_not_show</string>
    <string name="key_file_extensions_show_all" translatable="false">key_$_file_extensions_show_all</string>
    <string name="key_file_extensions_show_all_but_executable" translatable="false">key_$_file_extensions_show_all_but_executable</string>
    <string name="key_floating_menu_shown" translatable="false">key_$_floating_menu_shown</string>
    <string name="key_foreground_service" translatable="false">key_$_foreground_service</string>
    <string name="key_gesture_observing" translatable="false">key_$_gesture_observing</string>
    <string name="key_guard_mode" translatable="false">key_$_guard_mode</string>
    <string name="key_hidden_files" translatable="false">key_$_hidden_files</string>
    <string name="key_hidden_files_not_show" translatable="false">key_$_hidden_files_not_show</string>
    <string name="key_hidden_files_show" translatable="false">key_$_hidden_files_show</string>
    <string name="key_ignored_updates" translatable="false">key_$_ignored_updates</string>
    <string name="key_keep_screen_on_when_in_foreground" translatable="false">key_$_keep_screen_on_when_in_foreground</string>
    <string name="key_keep_screen_on_when_in_foreground_all_pages" translatable="false">key_$_keep_screen_on_when_in_foreground_all_pages</string>
    <string name="key_keep_screen_on_when_in_foreground_disabled" translatable="false">key_$_keep_screen_on_when_in_foreground_disabled</string>
    <string name="key_keep_screen_on_when_in_foreground_enabled" translatable="false">key_$_keep_screen_on_when_in_foreground_enabled</string>
    <string name="key_keep_screen_on_when_in_foreground_homepage_only" translatable="false">key_$_keep_screen_on_when_in_foreground_homepage_only</string>
    <string name="key_keep_screen_on_when_in_foreground_last_enabled" translatable="false">key_$_keep_screen_on_when_in_foreground_last_enabled</string>
    <string name="key_last_no_newer_updates" translatable="false">key_$_last_no_newer_updates</string>
    <string name="key_last_updates_auto_checked" translatable="false">key_$_last_updates_auto_checked</string>
    <string name="key_last_updates_checked" translatable="false">key_$_last_updates_checked</string>
    <string name="key_last_updates_postponed" translatable="false">key_$_last_updates_postponed</string>
    <string name="key_launcher_shortcuts" translatable="false">key_$_launcher_shortcuts</string>
    <string name="key_manage_ignored_updates" translatable="false">key_$_manage_ignored_updates</string>
    <string name="text_execute">Execute</string>
    <string name="text_analyze_ui">Analyze UI</string>
    <string name="text_learning_mode">Learning Mode</string>
    <string name="text_execution_history">Execution History</string>
    <string name="text_auto_execute">Auto Execute</string>
    <string name="text_describe_task">Describe your task...</string>
    <string name="text_agent_status">Agent Status</string>
    <string name="text_model_config">Model Config</string>
    <string name="text_ready">Ready</string>
    <string name="text_settings">Settings</string>
    <string name="text_test_connection">Test Connection</string>
    <string name="text_enable_model">Enable</string>
    <string name="text_default_model">Default Model</string>
    <string name="text_no_models_configured">No models configured</string>
    <string name="text_add_models_to_get_started">Add AI models to get started with intelligent automation</string>
    <string name="text_add_default_models">Add Default Models</string>
</resources>